correct paid leave, LWP, absent days and metadata and implemented report and sandwich rule
